--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,15 +5,47 @@
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
+        <!-- Font Awesome -->
+        <link
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+        rel="stylesheet"
+        />
+<!-- Google Fonts -->
+        <link
+        href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+        rel="stylesheet"
+        />
+<!-- MDB -->
+        <link
+        href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.2.0/mdb.min.css"
+        rel="stylesheet"
+        />
+        <link rel="stylesheet" href="https://bootswatch.com/5/quartz/bootstrap.min.css" />
+        <link rel="stylesheet" href="https://bootswatch.com/5/quartz/bootstrap.css" />
+        
+        <link rel="stylesheet" href="{{ asset('assets/css/style.css') }}" />
+        
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
         {% endblock %}
 
         {% block javascripts %}
             {{ encore_entry_script_tags('app') }}
+      
+            <script src="{{ asset('assets/js/main.js') }}"></script>
         {% endblock %}
+        
     </head>
+    <!-- MDB -->
+<script
+  type="text/javascript"
+  src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.2.0/mdb.min.js"
+></script>
+
     <body>
-        {% block body %}{% endblock %}
+        {% block body %}
+        
+    
+        {% endblock %}
     </body>
 </html>
